@@ -1,3 +1,3 @@
 It is planned:
-1. multilingual support
+1. multilingual support ++
 2. Expansion of the functional
