@@ -1,10 +1,10 @@
 <div id="myBlockId" class="bookmarklet">
-  <p><{$block.text}></p>
-<div class="widget_help">  
-   <img alt="QRcode" style="border:1px solid;" src="<{$xoops_url}>/modules/printliminator/include/php/qr_img.php?d=<{$xoops_sitename}> - <{$xoops_pagetitle}> <{$xoops_url}><{$xoops_requesturi}>&amp;e=<{$block.qrcode_error}>&amp;s=<{$block.qrcode_size}>" />
+  <p><{$block.qrcode_title}></p>
+<div class="widget_help">
+   <img alt="<{$block.qrcode_title}>" style="border:1px solid;" src="<{$xoops_url}>/modules/printliminator/include/php/qr_img.php?d=<{$xoops_sitename}> - <{$xoops_pagetitle}> <{$xoops_url}><{$xoops_requesturi}>&amp;e=<{$block.qrcode_error}>&amp;s=<{$block.qrcode_size}>" />
             <span class="tooltip_help bookmarklet"> 
                 <div class="footer_print"><{$xoops_sitename}> - <{$xoops_pagetitle}> <{$xoops_url}><{$xoops_requesturi}>
                 </div>
-          </span>  
+            </span>  
 </div>
 </div>
